# Haven-LLM-Studio

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  build.sh  first-run.sh  package.json  package.workspaces.json  setup.sh  smoke-test.sh  tsconfig.json  tsconfig.server.json  tsconfig.ui.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-pages.yml
benchmarks/: run.ts
integrations/kde/: com.havenllm.Studio.service  com.havenllm.Studio.xml  haven-krunner.py  haven-llm-studio.desktop  install.sh
integrations/kde/plasmoid/: metadata.json
integrations/kde/plasmoid/contents/ui/: main.qml
integrations/termux/: boot.sh  install.sh
mobile/: App.tsx  app.json  package.json
mobile/android/src/main/: AndroidManifest.xml
mobile/android/src/main/cpp/: CMakeLists.txt  haven_inference.cpp
mobile/android/src/main/java/com/havenllm/mobile/: BootReceiver.kt  HavenInferenceService.kt  HavenNativeModule.java  HavenPackage.kt
mobile/src/api/: haven-client.ts
mobile/src/screens/: HomeScreen.tsx  LocalInferenceScreen.tsx  ModelBrowserScreen.tsx  ServerDetailScreen.tsx  SettingsScreen.tsx
mobile/src/services/: local-inference.ts
mobile/src/store/: app-store.ts
native/: CMakeLists.txt  binding.gyp
native/src/: haven_addon.cpp  haven_core.h  inference_engine.cpp  model_manager.cpp  model_manager.h  optimization_layer.cpp  optimization_layer.h
src/app/: desktop-integration.ts  index.html  main.ts  preload.ts
src/app/ui/: App.tsx  index.html  styles.css  types.ts
src/app/ui/components/: ClusterPanel.tsx  Header.tsx  MainPanel.tsx  RightPanel.tsx  Sidebar.tsx  ToastContainer.tsx
src/app/ui/hooks/: useHavenAPI.ts
src/cli/: index.ts
src/server/: index.ts
src/server/services/: cluster-protocol.ts  cluster.service.ts  inference.service.ts  model.service.ts  native-loader.ts  system-monitor.service.ts
src/server/utils/: huggingface.ts
src/tui/: chat.tsx
tests/: server.test.ts
website/: CNAME  articles.json  docs.html  generate-icons.sh  index.html  sdk.html  troubleshooting.html
